--- a/prez.qmd
+++ b/prez.qmd
@@ -34,7 +34,7 @@ $~$
 ::: notes
 Good Afternoon, my name is Jake Eisaguirre and I am the Data Manager for RIBBiTR.
 We are an institute that studies the resilience in living systems using amphibian resilience to disease and other stressors as our test case.
-At RIBBiTR we have a lot of fascinating research going on, however I am going to spend this time discussing the application of "open science" at RIBBiTR and the value it can bring to science as a whole.
+At RIBBiTR we have a lot of fascinating research going on, however I am going to be discussing the application of "open science" at RIBBiTR and the value it can bring to science as a whole.
 
 CORI: Maybe say we are studying resilience in living systems using amphibian resilience to disease and other stressors as our test case.  I say this because we are on the hook with NSF to do more than study frogs :)  Slides look great so far though.
 :::
@@ -60,9 +60,9 @@ There are three sectors of open science: Accessibility, Reproducibility, and Inc
 
 Accessibility encompasses open access to literature, meaning do researchers have access to your papers. But this goes beyond access to papers to include access to your code and anything else that is part of your research workflow. As well as open source software, which does not have licencing costs, and public data repositories.
 
-Reproducibility refers to open collaboration and open tools. Essentially can you share your work with a colleague and they can easily download the necessary software, access the data, run the analysis with out errors, and see the same output.
+Reproducibility refers to open collaboration and open tools. Essentially can you share your work with a colleague and they can easily download the necessary software, access the data, run the analysis, and see the same output.
 
-And finally Inclusivity: we are developing these pipelines with the commitment of diversity and inclusion to expand participation and partnerships. Including to those who might not have access to proprietary (non-open source) software.
+And finally Inclusivity: we are developing these pipelines with the commitment of diversity and inclusion to expand participation and partnerships. Including to those who might not have access to proprietary software.
 
 :::
 
@@ -150,9 +150,9 @@ At RIBBiTR we have been doing our best to promote and adhere to open science pri
 
 In the realm of Accessibility we have an internal PostgreSQL relational database stored on an AWS server. We have created a front end webapp to allow researchers to explore and download data. We strongly recommend researchers to utilize open source software like RStudio, Jupyter Lab, and DBeaver. Following completion of our grant the database will be stored in a public repository like DataOne. And finally, when possible we publish in open access journals.
 
-The image here illustrates one example of a reproducible workflow we promote at RIBBiTR. We collect data using the Fulcrum app. Researchers create a back end connection to the cloud based database. They query and analyze the data of interest in RStudio. Researchers utilize quarto documents to develop manuscripts and collaborate through git and github. Finally the entire reproducible repository is published to a journal. 
+The image here illustrates one example of a reproducible workflow at RIBBiTR. We collect data using the Fulcrum app. Researchers create a back end connection to the cloud hosted database. They query and analyze the data of interest in RStudio. Researchers utilize quarto documents to develop and collaborate on manuscripts through git and github. Finally the entire reproducible repository is published to a journal. 
 
-As for inclusive: we at RIBBiTR have worked very hard to promote and build our early career researcher community. Our course based undergraduate research experience trains and educates undergraduates, through the lens of open science, with lab and field based protocols. We also have our pilot and exploratory project funding for graduate students and post docs. And finally we provide RIBBiTR 101 training sessions which are educational seminars for RIBBiTR researchers or associated researchers.
+As for inclusive: we at RIBBiTR have worked very hard to promote and build our early career researcher community. Our course based undergraduate research experience trains and educates undergraduates, through the lens of open science, with lab and field based protocols. We also have our pilot and exploratory project funding and RIBBiTR 101 training sessions for RIBBiTR researchers and associated researchers.
 
 CORI:
 
@@ -189,7 +189,7 @@ I think what you have for inclusivity is fine but if you wanted to make the talk
 :::
 
 ::: notes
-The adoption of open science principles has and will almost certainly continue to increase the efficiency and quality of research, allow for expansion of innovation, and facilitate collaboration. With open science principles our colleagues can verify and error our research at a much more efficient pace by providing the raw data, code for analysis, and manuscript all in a reproducible repository.
+The adoption of open science principles has and will almost certainly continue to increase the efficiency and quality of research, allow for expansion of innovation, and facilitate collaboration. With open science principles our colleagues can verify and error check our research at a much more efficient pace by providing the raw data, code for analysis, and manuscript all in a reproducible repository.
 
 Which brings me to my final point, take a moment and think about all the data you have ever collected or a student of yours has collected.
 Is that data just sitting on a hard drive in a dusty old laptop? Those are dark data, and I suspect we could pool all the dark data in this room and have readily available data for endless graduate students.
