--- a/prez.qmd
+++ b/prez.qmd
@@ -52,13 +52,13 @@ CORI: Maybe say we are studying resilience in living systems using amphibian res
 ::: notes
 Well what is open science?
 
-Maybe you have heard the term but are uncertain what it entails or how to apply it but hopefully this is not a new term as NSF has mandated it, to a certain extent, across all NSF funded institutes. 
+Maybe you have heard the term but are uncertain what it entails or how to apply it but hopefully this is not a new term as NSF has mandated it across all NSF funded institutes. 
 
 Open science as an umbrella term encompassing the movement to make research and its dissemination accessible at all levels.
 
 There are three sectors of open science: Accessibility, Reproducibility, and Inclusivity.
 
-Accessibility encompasses open access to literature, meaning do researchers have access to your papers. But this goes beyond access to papers to include access to your code and anything else that is part of your research workflow. As well as open source software, which does not have licencing costs, and public data repositories.
+Accessibility encompasses open access to literature, meaning do researchers have access to your papers. But this goes beyond access to papers to include access to your code, data repositories, and open source software that was all part of your research workflow. 
 
 Reproducibility refers to open collaboration and open tools. Essentially can you share your work with a colleague and they can easily download the necessary software, access the data, run the analysis, and see the same output.
 
@@ -150,9 +150,9 @@ At RIBBiTR we have been doing our best to promote and adhere to open science pri
 
 In the realm of Accessibility we have an internal PostgreSQL relational database stored on an AWS server. We have created a front end webapp to allow researchers to explore and download data. We strongly recommend researchers to utilize open source software like RStudio, Jupyter Lab, and DBeaver. Following completion of our grant the database will be stored in a public repository like DataOne. And finally, when possible we publish in open access journals.
 
-The image here illustrates one example of a reproducible workflow at RIBBiTR. We collect data using the Fulcrum app. Researchers create a back end connection to the cloud hosted database. They query and analyze the data of interest in RStudio. Researchers utilize quarto documents to develop and collaborate on manuscripts through git and github. Finally the entire reproducible repository is published to a journal. 
+The image here illustrates one example of a reproducible workflow at RIBBiTR. We collect data using the Fulcrum app. Researchers then create a back end connection to the cloud hosted database where they query and analyze the data of interest in RStudio. Researchers then utilize quarto documents to develop and collaborate on manuscripts through git and github. Finally the entire reproducible repository is published to a journal. 
 
-As for inclusive: we at RIBBiTR have worked very hard to promote and build our early career researcher community. Our course based undergraduate research experience trains and educates undergraduates, through the lens of open science, with lab and field based protocols. We also have our pilot and exploratory project funding and RIBBiTR 101 training sessions for RIBBiTR researchers and associated researchers.
+As for inclusive: we at RIBBiTR have worked very hard to promote and build our early career researcher community. Our course based undergraduate research experience trains and educates undergraduates through the lens of open science with lab and field based protocols. We also have our pilot and exploratory project funding and RIBBiTR 101 training sessions for RIBBiTR researchers and associated researchers.
 
 CORI:
 
@@ -192,7 +192,7 @@ I think what you have for inclusivity is fine but if you wanted to make the talk
 The adoption of open science principles has and will almost certainly continue to increase the efficiency and quality of research, allow for expansion of innovation, and facilitate collaboration. With open science principles our colleagues can verify and error check our research at a much more efficient pace by providing the raw data, code for analysis, and manuscript all in a reproducible repository.
 
 Which brings me to my final point, take a moment and think about all the data you have ever collected or a student of yours has collected.
-Is that data just sitting on a hard drive in a dusty old laptop? Those are dark data, and I suspect we could pool all the dark data in this room and have readily available data for endless graduate students.
+Is that data just sitting on a hard drive in a dusty old laptop? Those are dark data, and I suspect we could pool all the dark data in this room and have a readily available supply of data for endless graduate students.
 
 So utilize public data repositories, share your data, and lets work together to uncover the answers hidden in our data.
  
