--- a/prez.qmd
+++ b/prez.qmd
@@ -152,7 +152,7 @@ In the realm of Accessibility we have an internal PostgreSQL relational database
 
 The image here illustrates one example of a reproducible workflow at RIBBiTR. We collect data using the Fulcrum app. Researchers then create a back end connection to the cloud hosted database where they query and analyze the data of interest in RStudio. Researchers then utilize quarto documents to develop and collaborate on manuscripts through git and github. Finally the entire reproducible repository is published to a journal. 
 
-As for inclusive: we at RIBBiTR have worked very hard to promote and build our early career researcher community. Our course based undergraduate research experience trains and educates undergraduates through the lens of open science with lab and field based protocols. We also have our pilot and exploratory project funding and RIBBiTR 101 training sessions for RIBBiTR researchers and associated researchers.
+As for inclusive: we at RIBBiTR have worked very hard to promote and build our early career researcher community. Our course based undergraduate research experience trains and educates undergraduates, through the lens of open science, with lab and field based protocols. We also have our pilot and exploratory project funding and our RIBBiTR 101 training sessions for RIBBiTR researchers and associated researchers.
 
 CORI:
 
@@ -191,8 +191,8 @@ I think what you have for inclusivity is fine but if you wanted to make the talk
 ::: notes
 The adoption of open science principles has and will almost certainly continue to increase the efficiency and quality of research, allow for expansion of innovation, and facilitate collaboration. With open science principles our colleagues can verify and error check our research at a much more efficient pace by providing the raw data, code for analysis, and manuscript all in a reproducible repository.
 
-Which brings me to my final point, take a moment and think about all the data you have ever collected or a student of yours has collected.
-Is that data just sitting on a hard drive in a dusty old laptop? Those are dark data, and I suspect we could pool all the dark data in this room and have a readily available supply of data for endless graduate students.
+Which brings me to my final point, take a moment and think about all the data you or a student of yours has collected.
+Is that data just sitting on a hard drive? Those are dark data, and I suspect we could pool all the dark data in this room and have a readily available supply of data for endless graduate students.
 
 So utilize public data repositories, share your data, and lets work together to uncover the answers hidden in our data.
  
